# httpie-ipl-sign

./: README.md  pyproject.toml
httpie_ipl_sign/: ipl_sign.py
tests/: test_ipl_sign_plugin.py
